@@ -58,7 +58,7 @@ const io::path CGUIEnvironment::DefaultFontName = "#DefaultFont";
 CGUIEnvironment::CGUIEnvironment(io::IFileSystem* fs, video::IVideoDriver* driver, IOSOperator* op)
 : IGUIElement(EGUIET_ROOT, 0, 0, 0, core::rect<s32>(core::position2d<s32>(0,0), driver ? core::dimension2d<s32>(driver->getScreenSize()) : core::dimension2d<s32>(0,0))),
 	Driver(driver), Hovered(0), HoveredNoSubelement(0), Focus(0), LastHoveredMousePos(0,0), CurrentSkin(0),
-	FileSystem(fs), UserReceiver(0), Operator(op)
+	FileSystem(fs), UserReceiver(0), Operator(op), FocusFlags(EFF_SET_ON_LMOUSE_DOWN|EFF_SET_ON_TAB)
 {
 	if (Driver)
 		Driver->grab();
@@ -574,10 +574,30 @@ bool CGUIEnvironment::postEventFromUser(const SEvent& event)
 
 		updateHoveredElement(core::position2d<s32>(event.MouseInput.X, event.MouseInput.Y));
 
-		if (event.MouseInput.Event == EMIE_LMOUSE_PRESSED_DOWN)
-			if ( (Hovered && Hovered != Focus) || !Focus )
+		if ( Hovered != Focus )
 		{
-			setFocus(Hovered);
+			IGUIElement * focusCandidate = Hovered;
+
+			// Only allow enabled elements to be focused (unless EFF_CAN_FOCUS_DISABLED is set)
+			if ( !Hovered->isEnabled() && !(FocusFlags & EFF_CAN_FOCUS_DISABLED))
+				focusCandidate = NULL;	// we still remove focus from the active element
+
+			// Please don't merge this into a single if clause, it's easier to debug the way it is
+			if (FocusFlags & EFF_SET_ON_LMOUSE_DOWN &&
+				event.MouseInput.Event == EMIE_LMOUSE_PRESSED_DOWN )
+			{
+				setFocus(focusCandidate);
+			}
+			else if ( FocusFlags & EFF_SET_ON_RMOUSE_DOWN &&
+				event.MouseInput.Event == EMIE_RMOUSE_PRESSED_DOWN )
+			{
+				setFocus(focusCandidate);
+			}
+			else if ( FocusFlags & EFF_SET_ON_MOUSE_OVER &&
+				event.MouseInput.Event == EMIE_MOUSE_MOVED )
+			{
+				setFocus(focusCandidate);
+			}
 		}
 
 		// sending input to focus
@@ -599,7 +619,8 @@ bool CGUIEnvironment::postEventFromUser(const SEvent& event)
 
 			// For keys we handle the event before changing focus to give elements the chance for catching the TAB
 			// Send focus changing event
-			if (event.EventType == EET_KEY_INPUT_EVENT &&
+			if (FocusFlags & EFF_SET_ON_TAB &&
+				event.EventType == EET_KEY_INPUT_EVENT &&
 				event.KeyInput.PressedDown &&
 				event.KeyInput.Key == KEY_TAB)
 			{
@@ -610,7 +631,6 @@ bool CGUIEnvironment::postEventFromUser(const SEvent& event)
 						return true;
 				}
 			}
-
 		}
 		break;
 	default:
@@ -1640,7 +1660,7 @@ IGUIElement* CGUIEnvironment::getNextElement(bool reverse, bool group)
 	// find the element
 	IGUIElement *closest = 0;
 	IGUIElement *first = 0;
-	startPos->getNextElement(startOrder, reverse, group, first, closest);
+	startPos->getNextElement(startOrder, reverse, group, first, closest, false, FocusFlags & EFF_CAN_FOCUS_DISABLED);
 
 	if (closest)
 		return closest; // we found an element
@@ -1652,6 +1672,15 @@ IGUIElement* CGUIEnvironment::getNextElement(bool reverse, bool group)
 		return 0;
 }
 
+void CGUIEnvironment::setFocusBehavior(u32 flags)
+{
+	FocusFlags = flags;
+}
+
+u32 CGUIEnvironment::getFocusBehavior() const
+{
+	return FocusFlags;
+}
 
 //! creates an GUI Environment
 IGUIEnvironment* createGUIEnvironment(io::IFileSystem* fs,
